--- a/.projections.json
+++ b/.projections.json
@@ -1,3 +1,4 @@
 {
-    "app/assets/javascripts/components/*.js.jsx": {"type": "component"}
+    "app/assets/javascripts/components/*.js.jsx": {"type": "component"},
+    "app/assets/javascripts/modes/*.js": {"type": "mode"}
 }
