--- a/.projections.json
+++ b/.projections.json
@@ -1,4 +1,6 @@
 {
     "app/assets/javascripts/components/*.js.jsx": {"type": "component"},
-    "app/assets/javascripts/modes/*.js": {"type": "mode"}
+    "app/assets/javascripts/modes/*.js": {"type": "mode"},
+    "app/assets/javascripts/state/*.js": {"type": "state"}
+    "app/assets/javascripts/actions/*.js": {"type": "action"},
 }
