--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,8 @@
 [defaults]
 vault_password_file=.ansible_key
+roles_path=ansible/galaxy_roles
+
+[ssh_connection]
+ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
+
+pipelining = true
